--- a/package.json
+++ b/package.json
@@ -201,6 +201,24 @@
                 "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/jk_lakala.zip",
                 "download_filename": "jk_lakala.zip",
                 "md5": "51cdebe2f01e1b9a77b84e3a90864b47"
+            },
+            {
+                "uuid": "183073b2-6b0c-4b7d-9c0b-7a8ef21e08ee",
+                "name": "yun_qqpay",
+                "title": "QQ钱包-Y",
+                "type": 1,
+                "description": "QQ钱包",
+                "author": "萌新",
+                "homepage": "https://blog.52nyg.com",
+                "preview_url": "",
+                "preview_img_url": "https://imgcache.gtimg.cn/channel/qpay/buss/asset/pay/img/global/header_logo.png",
+                "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
+                "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
+                "update_time": 1730826431,
+                "version": "1.0.0",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/yun_qqpay.zip",
+                "download_filename": "yun_qqpay.zip",
+                "md5": "5108f9dee4acf4ddabbf7584b99cb08c"
             }
 
             
