--- a/package.json
+++ b/package.json
@@ -229,7 +229,7 @@
                 "author": "萌新",
                 "homepage": "https://blog.52nyg.com",
                 "preview_url": "",
-                "preview_img_url": "https://imgcache.gtimg.cn/channel/qpay/buss/asset/pay/img/global/header_logo.png",
+                "preview_img_url": "https://apps.xarr.cn/assets/images/wxpay.png",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "update_time": 1730942823,
