--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
-                "preview_img_url": "https://img.picui.cn/free/2024/10/08/6705417d54532.png",
+                "preview_img_url": "https://cdn.xdau.cn/logo1-1.svg",
                 "external_support_url": "https://www.xdau.cn/",
                 "external_repository_url": "",
                 "update_time": 1728746813,
@@ -139,7 +139,7 @@
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
-                "preview_img_url": "https://img.picui.cn/free/2024/10/08/6705417d54532.png",
+                "preview_img_url": "https://cdn.xdau.cn/logo1-1.svg",
                 "external_support_url": "https://www.xdau.cn/",
                 "external_repository_url": "",
                 "update_time": 1729045443,
@@ -157,7 +157,7 @@
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
-                "preview_img_url": "https://img.picui.cn/free/2024/10/08/6705417d54532.png",
+                "preview_img_url": "https://cdn.xdau.cn/logo1-1.svg",
                 "external_support_url": "https://www.xdau.cn/",
                 "external_repository_url": "",
                 "update_time": 1729045443,
