--- a/package.json
+++ b/package.json
@@ -205,15 +205,15 @@
             {
                 "uuid": "183073b2-6b0c-4b7d-9c0b-7a8ef21e08ee",
                 "name": "yun_qqpay",
-                "title": "QQ钱包-Y",
+                "title": "QQ钱包-☁️",
                 "type": 1,
                 "description": "QQ钱包",
                 "author": "萌新",
-                "homepage": "https://blog.52nyg.com",
+                "homepage": "https://www.zunhuyun.com/",
                 "preview_url": "",
                 "preview_img_url": "https://imgcache.gtimg.cn/channel/qpay/buss/asset/pay/img/global/header_logo.png",
-                "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
+                "external_support_url": "",
+                "external_repository_url": "",
                 "update_time": 1730942823,
                 "version": "1.0.0",
                 "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/yun_qqpay.zip",
@@ -227,11 +227,11 @@
                 "type": 1,
                 "description": "微信-IMAC",
                 "author": "萌新",
-                "homepage": "https://blog.52nyg.com",
+                "homepage": "https://www.zunhuyun.com/",
                 "preview_url": "",
                 "preview_img_url": "https://apps.xarr.cn/assets/images/wxpay.png",
-                "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
+                "external_support_url": "",
+                "external_repository_url": "",
                 "update_time": 1730942823,
                 "version": "1.0.0",
                 "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/yun_wechat_imac.zip",
