--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "code": 200,
     "message": "获取成功",
     "data": {
-        "name": "包子的插件仓库",
+        "name": "第三方的插件仓库",
         "plugins": [
             {
                 "uuid": "2fa6d0cf-06eb-49b3-b6ff-3cd6821b0fc3",
@@ -16,11 +16,11 @@
                 "preview_img_url": "https://imgcache.gtimg.cn/channel/qpay/buss/asset/pay/img/global/header_logo.png",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "update_time": 1727665799,
-                "version": "1.0.1",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.1/jk_qqpay.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_qqpay.zip",
                 "download_filename": "jk_qqpay.zip",
-                "md5": "7817fe1248ad57b981dfd10e0795a323"
+                "md5": "32ce4413849dbb8f696bb4b3d33f0fb8"
             },
             {
                 "uuid": "479d8056-7124-437b-8118-601f077bf8e0",
@@ -34,11 +34,11 @@
                 "preview_img_url": "https://apps.xarr.cn/assets/images/wxpay.png",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "update_time": 1729045443,
-                "version": "1.0.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.2/jk_wechat.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_wechat.zip",
                 "download_filename": "jk_wechat.zip",
-                "md5": "c86ff28da273871f62cab2e819dc919d"
+                "md5": "f926de2b7a8b7d712cf8f10da23839ab"
             },
             {
                 "uuid": "2a50db10-3ef6-4a57-a107-447c0bb28af0",
@@ -52,11 +52,11 @@
                 "preview_img_url": "https://apps.xarr.cn/assets/images/alipay_logo.gif",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "update_time": 1728700064,
-                "version": "1.0.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.1/jk_alipay.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_alipay.zip",
                 "download_filename": "jk_alipay.zip",
-                "md5": "b95118be1eeb77bc6def147d9954590e"
+                "md5": "a037eb4aac1e20dabe197ab0d0e6aa40"
             },
             {
                 "uuid": "1b0ecb5e-fdfd-4cfa-85de-28d24242b781",
@@ -70,11 +70,11 @@
                 "preview_img_url": "https://apps.xarr.cn/assets/images/jdpay.png",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "update_time": 1726753440,
-                "version": "1.0.0",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/jk_jdsyt.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_jdsyt.zip",
                 "download_filename": "jk_jdsyt.zip",
-                "md5": "11c8fdaa1acf161cc9ece668c46553e3"
+                "md5": "f17e0058d7bef33f01194c2be61b282d"
             },
             {
                 "uuid": "ec22d323-8f19-4072-8106-fdaae3b9a6cf",
@@ -83,16 +83,16 @@
                 "type": 1,
                 "description": "Epusdt（全称：Easy Payment Usdt）是一个由Go语言编写的私有化部署Usdt支付中间件(Trc20网络)",
                 "author": "包子",
-                "homepage": "https://blog.52nyg.com",
+                "homepage": "https://github.com/assimon/epusdt",
                 "preview_url": "",
                 "preview_img_url": "https://apps.xarr.cn/assets/images/tether.svg",
                 "external_support_url": "https://github.com/assimon/epusdt",
                 "external_repository_url": "https://github.com/assimon/epusdt",
-                "update_time": 1727505302,
-                "version": "1.0.1",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.1/epusdt.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/epusdt.zip",
                 "download_filename": "epusdt.zip",
-                "md5": "6970b8453522960ede51d069b5b4e922"
+                "md5": "d14e79ef877934f81014e78d5192a973"
             },
             {
                 "uuid": "e47789cf3-4277-4fa1-b6e6-58b5f5111249",
@@ -106,65 +106,65 @@
                 "preview_img_url": "https://apps.xarr.cn/assets/images/tether.svg",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
-                "update_time": 1727622439,
-                "version": "1.0.0",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/usdt.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/usdt.zip",
                 "download_filename": "usdt.zip",
-                "md5": "4de8c15d963f8f3dcfc0a4a85f449537"
+                "md5": "a8ed7e4ec7e7a06640cfc8085773fd76"
             },
             {
                 "uuid": "9b22bbd6-676d-46f5-8c91-004d111e030b",
                 "name": "yun_alipay_xd",
                 "title": "支付宝-XD",
                 "type": 1,
-                "description": "第三方辅助登录插件",
+                "description": "闲蛋插件",
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
                 "preview_img_url": "https://cdn.xdau.cn/logo1-1.svg",
                 "external_support_url": "https://www.xdau.cn/",
                 "external_repository_url": "",
-                "update_time": 1728746813,
-                "version": "1.0.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.2/yun_alipay_xd.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_alipay_xd.zip",
                 "download_filename": "yun_alipay_xd.zip",
-                "md5": "97b1ba2bff02e24d7e15f0bc20f6dc6d"
+                "md5": "76c81f897845eb2a31299a96fd45444a"
             },
             {
                 "uuid": "91367318-93c0-446a-a9b0-cbbbcbd75181",
                 "name": "yun_wechat_xd",
                 "title": "微信-XD",
                 "type": 1,
-                "description": "第三方辅助登录插件",
+                "description": "闲蛋插件",
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
                 "preview_img_url": "https://cdn.xdau.cn/logo1-1.svg",
                 "external_support_url": "https://www.xdau.cn/",
                 "external_repository_url": "",
-                "update_time": 1729045443,
-                "version": "1.0.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.2/yun_wechat_xd.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_xd.zip",
                 "download_filename": "yun_wechat_xd.zip",
-                "md5": "bac68ba2fdb4d4f70fddca4faedd1fbf"
+                "md5": "153904086eba9f25f5e8a7f082e5b336"
             },
             {
                 "uuid": "ec30eaee-76c9-45c6-95ee-ff98e43f1d9c",
                 "name": "yun_wechat_uos_xd",
                 "title": "微信-UOS-XD",
                 "type": 1,
-                "description": "第三方辅助登录插件",
+                "description": "闲蛋插件",
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
                 "preview_img_url": "https://cdn.xdau.cn/logo1-1.svg",
                 "external_support_url": "https://www.xdau.cn/",
                 "external_repository_url": "",
-                "update_time": 1729045443,
-                "version": "1.0.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.2/yun_wechat_uos_xd.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_uos_xd.zip",
                 "download_filename": "yun_wechat_uos_xd.zip",
-                "md5": "4f922e9925aaf2f9f9f959a70fe53f38"
+                "md5": "425feab8a9ddd6a22ed9626e5d39e4ed"
             },
             {
                 "uuid": "affe673a-a5e4-4bad-bb7e-710a1dfcc2f9",
@@ -178,29 +178,29 @@
                 "preview_img_url": "https://apps.xarr.cn/assets/images/wxpay.png",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "",
-                "update_time": 1729045443,
-                "version": "1.0.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.2/yun_wechat_uos.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_uos.zip",
                 "download_filename": "yun_wechat_uos.zip",
-                "md5": "99ff88900e4d11bafa79908e4e1dd2dc"
+                "md5": "96b76e8754f92bba9b2965be3126cae3"
             },
             {
                 "uuid": "c221f568-5110-489c-92b6-fde78f1a24ac",
                 "name": "jk_lakala",
                 "title": "监控插件 - 拉卡拉",
                 "type": 1,
-                "description": "小工具",
+                "description": "监控插件",
                 "author": "包子",
                 "homepage": "https://blog.52nyg.com/",
                 "preview_url": "",
                 "preview_img_url": "https://apps.xarr.cn/assets/images/lakala.png",
                 "external_support_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "external_repository_url": "",
-                "update_time": 1730539846,
-                "version": "1.0.0",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/jk_lakala.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_lakala.zip",
                 "download_filename": "jk_lakala.zip",
-                "md5": "51cdebe2f01e1b9a77b84e3a90864b47"
+                "md5": "c3d711fd8f0fff92362f416c9f5bfd6a"
             },
             {
                 "uuid": "183073b2-6b0c-4b7d-9c0b-7a8ef21e08ee",
@@ -214,11 +214,11 @@
                 "preview_img_url": "https://imgcache.gtimg.cn/channel/qpay/buss/asset/pay/img/global/header_logo.png",
                 "external_support_url": "",
                 "external_repository_url": "",
-                "update_time": 1730942823,
-                "version": "1.0.0",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/yun_qqpay.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_qqpay.zip",
                 "download_filename": "yun_qqpay.zip",
-                "md5": "d2f06f68f0ac5a1b338c271a6970179a"
+                "md5": "b44b71410d85bb9a334699c6956aedc8"
             },
             {
                 "uuid": "9c748f77-3e03-49bf-96d8-7d2907c19234",
@@ -232,14 +232,12 @@
                 "preview_img_url": "https://apps.xarr.cn/assets/images/wxpay.png",
                 "external_support_url": "",
                 "external_repository_url": "",
-                "update_time": 1730942823,
-                "version": "1.0.0",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/releases/download/1.0.0/yun_wechat_imac.zip",
+                "update_time": 1731053118,
+                "version": "1.4.2",
+                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_imac.zip",
                 "download_filename": "yun_wechat_imac.zip",
-                "md5": "68822733065130b2ff11dacb6185c86e"
+                "md5": "a0eb9a702e6ca43fee0a5d432c19463b"
             }
-
-            
         ]
     }
 }
