--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_qqpay.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/jk_qqpay.zip",
                 "download_filename": "jk_qqpay.zip",
                 "md5": "32ce4413849dbb8f696bb4b3d33f0fb8"
             },
@@ -36,7 +36,7 @@
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_wechat.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/jk_wechat.zip",
                 "download_filename": "jk_wechat.zip",
                 "md5": "f926de2b7a8b7d712cf8f10da23839ab"
             },
@@ -54,7 +54,7 @@
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_alipay.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/jk_alipay.zip",
                 "download_filename": "jk_alipay.zip",
                 "md5": "a037eb4aac1e20dabe197ab0d0e6aa40"
             },
@@ -72,7 +72,7 @@
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_jdsyt.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/jk_jdsyt.zip",
                 "download_filename": "jk_jdsyt.zip",
                 "md5": "f17e0058d7bef33f01194c2be61b282d"
             },
@@ -90,7 +90,7 @@
                 "external_repository_url": "https://github.com/assimon/epusdt",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/epusdt.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/epusdt.zip",
                 "download_filename": "epusdt.zip",
                 "md5": "d14e79ef877934f81014e78d5192a973"
             },
@@ -108,7 +108,7 @@
                 "external_repository_url": "https://github.com/xiaoyi510/xarr-pay-merchant",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/usdt.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/usdt.zip",
                 "download_filename": "usdt.zip",
                 "md5": "a8ed7e4ec7e7a06640cfc8085773fd76"
             },
@@ -126,7 +126,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_alipay_xd.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/yun_alipay_xd.zip",
                 "download_filename": "yun_alipay_xd.zip",
                 "md5": "76c81f897845eb2a31299a96fd45444a"
             },
@@ -144,7 +144,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_xd.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/yun_wechat_xd.zip",
                 "download_filename": "yun_wechat_xd.zip",
                 "md5": "153904086eba9f25f5e8a7f082e5b336"
             },
@@ -162,7 +162,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_uos_xd.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/yun_wechat_uos_xd.zip",
                 "download_filename": "yun_wechat_uos_xd.zip",
                 "md5": "425feab8a9ddd6a22ed9626e5d39e4ed"
             },
@@ -180,7 +180,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_uos.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/yun_wechat_uos.zip",
                 "download_filename": "yun_wechat_uos.zip",
                 "md5": "96b76e8754f92bba9b2965be3126cae3"
             },
@@ -198,7 +198,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/jk_lakala.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/jk_lakala.zip",
                 "download_filename": "jk_lakala.zip",
                 "md5": "c3d711fd8f0fff92362f416c9f5bfd6a"
             },
@@ -216,7 +216,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_qqpay.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/yun_qqpay.zip",
                 "download_filename": "yun_qqpay.zip",
                 "md5": "b44b71410d85bb9a334699c6956aedc8"
             },
@@ -234,7 +234,7 @@
                 "external_repository_url": "",
                 "update_time": 1731053118,
                 "version": "1.4.2",
-                "download_url": "https://github.com/xiaoyi510/xarr-pay-merchant/raw/refs/heads/master/plugins/yun_wechat_imac.zip",
+                "download_url": "https://raw.githubusercontent.com/xiaoyi510/xarr-pay-merchant/refs/heads/master/plugins/yun_wechat_imac.zip",
                 "download_filename": "yun_wechat_imac.zip",
                 "md5": "a0eb9a702e6ca43fee0a5d432c19463b"
             }
