--- a/package.json
+++ b/package.json
@@ -243,7 +243,7 @@
                 "name": "jk_wmwechat_message",
                 "title": "监控插件 - 微信公众号/小程序",
                 "type": 1,
-                "description": "微信公众号模板消息/小程序消息 闲蛋插件",
+                "description": "微信公众号模板消息/小程序消息 目前包含:新生易 拉卡拉 闲蛋插件",
                 "author": "闲蛋",
                 "homepage": "https://www.xdau.cn/",
                 "preview_url": "",
